# repo-template

./: CMakeLists.txt  LICENSE.txt  README.md
dependencies/: CMakeLists.txt
include/std/experimental/: conqueue
include/stdx/: format.h
include/stdx/__detail/: platform.h
src/: conqueue.cpp
src/linux/: platform.cpp
src/mac/: platform.cpp
src/windows/: platform.cpp
test/: CMakeLists.txt  conqueue.test.cpp
